--- a/Documentation/Sudoku.tex
+++ b/Documentation/Sudoku.tex
@@ -29,7 +29,14 @@
 \newpage
 
 \include{Einleitung}
+\include{Methodik}
 
+% Einleitung
+% Methodik
+% Verifikation
+% Installation
+% Kompletter Quelltext
+% Anhang / CD
 
 
 \end{document}
