--- a/Documentation/LaTeX-Einstellungen.tex
+++ b/Documentation/LaTeX-Einstellungen.tex
@@ -1,4 +1,4 @@
-% !TEX root = QlockToo.tex
+% !TEX root = Sudoku.tex
 % Einstellungen
 \documentclass[10pt, DIV12, a4paper]{scrartcl}
 \usepackage[utf8]{inputenc}
@@ -19,6 +19,7 @@
 \usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{lscape}
+\usepackage{subfigure}
 
 \onehalfspacing
 \setcounter{tocdepth}{2} % Tiefe Inhaltsverzeichnis
