--- a/Documentation/Sudoku.tex
+++ b/Documentation/Sudoku.tex
@@ -7,10 +7,10 @@
 
     \end{tabular}
     \vspace{1.5cm}}
-\subject{IBV-Projekt}
+\subject{IBV-Projekt\vspace{3cm}}
 
-\title{Sudoku Löser}
-\subtitle{Sudoku solver}
+\title{Sudoku-CV}
+\subtitle{Lösen von 9x9 Sudokus mit der Webcam\vspace{3cm}}
 
 \author{
     \begin{tabular}{rl}
@@ -30,7 +30,9 @@
 
 \include{Einleitung}
 \include{Methodik}
+\include{Quelltext}
 
+% Logo
 % Einleitung
 % Methodik
 % Verifikation
